--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-particles-js": "^3.5.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "tsparticles": "^1.30.4",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
